[build-system]
requires = [ "setuptools>=42",]
build-backend = "setuptools.build_meta"

[project]
name = "cupless"
version = "1.1.0"
description = "A Linux command-line wrapper to print from the command-line without cups"
dependencies = []
readme = "README.md"
[[project.authors]]
name = "@readwithai"
email = "talwrii@github.com"

[project.scripts]
cupless = "cupless.main:main"

[project.urls]
Homepage = "https://github.com/talwrii/cupless"
